# formulario_GM

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
formulario_gm/: app.py  app_3.py  app_excel.py  respuestas2.xlsx
formulario_gm/.streamlit/: config.toml
