[tool.poetry]
name = "formulario-gm"
version = "0.1.0"
description = ""
authors = ["Cristian Gallego Arias <cgallego@celerix.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.0"
openpyxl = "^3.1.5"
gspread = "^6.1.4"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
